--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,17 @@ jobs:
     steps:
       - checkout
 
+      - run:
+          name: install venv
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
+
       # run tests!
       - run:
           name: run tests
