--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,14 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
+            pip install flake8
 
-      # run tests!
+      - run:
+          name: run lint
+          command: |
+            . venv/bin/activate
+            flake8
+
       - run:
           name: run tests
           command: |
