--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: run lint
           command: |
             . venv/bin/activate
-            flake8
+            flake8 --exclude venv
 
       - run:
           name: run tests
