--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,12 +48,16 @@ jobs:
       - run:
           name: download cpsuite
           command: |
+            ls
             sudo mkdir lib
             sudo wget -O lib/cpsuite-1.2.6.jar https://www.dropbox.com/s/fvi9v0t287vgsnq/cpsuite-1.2.6.jar\?dl\=1
 
       - run:
           name: compile
           command: |
+            ls
+            cd src/probs/ && ls
+            cd ~ && ls
             sudo javac -cp src src/probs/**/*.java
             sudo javac -cp .:/usr/share/java/junit4.jar:lib/cpsuite-1.2.6.jar:src test/probs/**/*.java
             sudo javac -cp .:/usr/share/java/junit4.jar:lib/cpsuite-1.2.6.jar:src test/probs/*.java
