Fix working_directory issue

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
     docker:
       - image: circleci/openjdk:9-node-browsers
 
-    working_directory: ~/repo/java
+    working_directory: ~/repo
 
     steps:
       - checkout
@@ -48,16 +48,14 @@ jobs:
       - run:
           name: download cpsuite
           command: |
-            ls
+            cd java
             sudo mkdir lib
             sudo wget -O lib/cpsuite-1.2.6.jar https://www.dropbox.com/s/fvi9v0t287vgsnq/cpsuite-1.2.6.jar\?dl\=1
 
       - run:
           name: compile
           command: |
-            ls
-            cd src/probs/ && ls
-            cd ~ && ls
+            cd java
             sudo javac -cp src src/probs/**/*.java
             sudo javac -cp .:/usr/share/java/junit4.jar:lib/cpsuite-1.2.6.jar:src test/probs/**/*.java
             sudo javac -cp .:/usr/share/java/junit4.jar:lib/cpsuite-1.2.6.jar:src test/probs/*.java
@@ -65,6 +63,7 @@ jobs:
       - run:
           name: run tests
           command: |
+            cd java
             sudo java -cp .:/usr/share/java/junit4.jar:java/test:java/src org.junit.runner.JUnitCore prob09_divisor.DivisorTest
             sudo java -cp .:/usr/share/java/junit4.jar:lib/cpsuite-1.2.6.jar:test:src probs.RunAllSuite
 
